--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -779,6 +779,22 @@ label.error {
     font-family: 'Inter' sans-serif;
 }
 
+.fs-18 {
+    font-size: 18px;
+}
+
+.fs-20 {
+    font-size: 20px;
+}
+.fw-6 {
+    font-weight: 600;
+}
+.fw-7 {
+    font-weight: 700;
+}
+.lh-24 {
+    line-height: 24px;
+}
 .mb-1 {
     margin-bottom: 1px;
 }
@@ -977,26 +993,26 @@ a {
 
 /* Header Fixed */
 
-.header_1 {
-    &.is-fixed {
-        position: fixed;
-        top: -200px;
-        left: 0;
-        width: 100%;
-        box-shadow: 1px 1px 5px 0px rgb(0 0 0 / 30%);
-        z-index: 99999;
-        background: var(--primary-color);
-        border: none;
-        opacity: 0;
-        @include transition5;
-        #main-nav > ul > li > a {
-            color: var(--primary-color2);
-        }
-        #main-nav > ul > .current-menu-item > a {
-            color: var(--primary-color3);
-        }   
-    }
-}
+// .header_1 {
+//     &.is-fixed {
+//         position: unset;
+//         top: -200px;
+//         left: 0;
+//         width: 100%;
+//         box-shadow: 1px 1px 5px 0px rgb(0 0 0 / 30%);
+//         z-index: 99999;
+//         background: var(--primary-color);
+//         border: none;
+//         opacity: 0;
+//         @include transition5;
+//         #main-nav > ul > li > a {
+//             color: var(--primary-color2);
+//         }
+//         #main-nav > ul > .current-menu-item > a {
+//             color: var(--primary-color3);
+//         }   
+//     }
+// }
 
 .header_1.is-fixed.is-small {
     top: 0;
