--- a/app/scss/abstracts/_variables.scss
+++ b/app/scss/abstracts/_variables.scss
@@ -7,3 +7,4 @@ $color-1: #fff;
 $color-2: #000;
 $color-5: rgba(255, 255, 255, 0.1);
 
+$bg-color: linear-gradient(153.06deg, #E6902B -0.31%, #A91B3D 99.69%);
